[gd_scene load_steps=4 format=4 uid="uid://c08std24ix6u7"]

[ext_resource type="Script" path="res://scripts/test_map.gd" id="1_75fmb"]
[ext_resource type="TileSet" uid="uid://m2sx6o4um3wk" path="res://default_tileset.tres" id="1_uxkdi"]
[ext_resource type="PackedScene" uid="uid://ddurxphw7iort" path="res://scenes/player.tscn" id="2_td4xg"]

[node name="Test_Map" type="Node2D"]
script = ExtResource("1_75fmb")

[node name="Background" type="ColorRect" parent="."]
use_parent_material = true
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0, 0, 0, 1)

[node name="Red_layer" type="TileMapLayer" parent="."]
modulate = Color(1, 0, 0, 1)
use_parent_material = true
tile_map_data = PackedByteArray("AAAMAA8AAAAAAAEAAAANAA8AAAAAAAEAAAAOAA8AAAAAAAEAAAAPAA8AAAAAAAEAAAAQAA8AAAAAAAEAAAARAA8AAAAAAAEAAAASAA8AAAAAAAEAAAATAA8AAAAAAAEAAAAUAA8AAAAAAAEAAAAVAA8AAAAAAAEAAAAWAA8AAAAAAAEAAAAXAA8AAAAAAAEAAAAMABAAAAACAAEAAAANABAAAAACAAEAAAAOABAAAAACAAEAAAAPABAAAAACAAEAAAAQABAAAAACAAEAAAARABAAAAACAAEAAAASABAAAAACAAEAAAATABAAAAACAAEAAAAUABAAAAACAAEAAAAVABAAAAACAAEAAAAWABAAAAACAAEAAAAXABAAAAACAAEAAAALAA8AAAAAAAIAAAAYABAAAAACAAIAAAALABAAAAADAAIAAAAYAA8AAAABAAIAAAATAAkAAAAEAAMAAAASAAkAAAAEAAMAAAAUAAkAAAABAAMAAAARAAkAAAADAAMAAAA=")
tile_set = ExtResource("1_uxkdi")

[node name="Green_layer" type="TileMapLayer" parent="."]
modulate = Color(0, 1, 0, 1)
use_parent_material = true
tile_map_data = PackedByteArray("AAAZAAwAAAAEAAAAAAAbAAwAAAAEAAAAAAAdAAwAAAAEAAAAAAAXAAgAAAAAAAMAAAAXAA0AAAACAAMAAAAXAAkAAAAEAAIAAAAXAAoAAAAEAAIAAAAXAAsAAAAEAAIAAAAXAAwAAAAEAAIAAAANAAwAAAAEAAMAAAAOAAwAAAAEAAMAAAAPAAwAAAAEAAMAAAAQAAwAAAABAAMAAAAMAAwAAAADAAMAAAAQAAQAAAADAAMAAAAVAAQAAAABAAMAAAARAAQAAAAEAAMAAAASAAQAAAAEAAMAAAATAAQAAAAEAAMAAAAUAAQAAAAEAAMAAAAWABAAAAADAAMAAAAeABAAAAABAAMAAAAaABIAAAACAAMAAAAXABAAAAAEAAMAAAAYABAAAAAEAAMAAAAZABAAAAAEAAMAAAAdABAAAAAEAAMAAAAcABAAAAAEAAMAAAAbABAAAAAEAAMAAAAaABEAAAAEAAIAAAAaABAAAAAAAAEAAAAYAAIAAAAEAAIAAAAYAAMAAAAEAAIAAAAYAAQAAAAEAAIAAAAYAAEAAAAEAAIAAAAYAAUAAAACAAMAAAAYAAAAAAAEAAIAAAAYAP//AAAEAAIAAAA=")
tile_set = ExtResource("1_uxkdi")

[node name="Blue_layer" type="TileMapLayer" parent="."]
modulate = Color(0, 0.333333, 1, 1)
use_parent_material = true
tile_map_data = PackedByteArray("AAAOAAYAAAAEAAAAAAALAAYAAAAEAAAAAAAaAAEAAAAEAAIAAAAaAAIAAAAEAAIAAAAaAAMAAAAEAAIAAAAaAAQAAAAEAAIAAAAaAAUAAAAEAAIAAAAaAAYAAAACAAMAAAAaAAAAAAAEAAIAAAAaAP//AAAEAAIAAAA=")
tile_set = ExtResource("1_uxkdi")

[node name="White_layer" type="TileMapLayer" parent="."]
use_parent_material = true
tile_map_data = PackedByteArray("AAAdAAMAAAAEAAEAAAAeAAMAAAAEAAEAAAAfAAMAAAAEAAEAAAAgAAMAAAAEAAEAAAAgAAQAAAAEAAEAAAAfAAQAAAAEAAEAAAAeAAQAAAAEAAEAAAAdAAQAAAAEAAEAAAAdAAUAAAACAAEAAAAeAAUAAAACAAEAAAAfAAUAAAACAAEAAAAgAAUAAAABAAAAAAAdAAIAAAAAAAEAAAAeAAIAAAAAAAEAAAAfAAIAAAAAAAEAAAAgAAIAAAAAAAEAAAAcAAIAAAAAAAIAAAAhAAIAAAABAAIAAAAcAAMAAAABAAEAAAAcAAQAAAABAAEAAAAcAAUAAAADAAIAAAAhAAMAAAADAAEAAAAhAAQAAAADAAEAAAAhAAUAAAADAAEAAAAhAAYAAAADAAEAAAAgAAYAAAABAAEAAAAhAAcAAAACAAIAAAAgAAcAAAADAAIAAAAEABEAAAAAAAEAAAAFABEAAAAAAAEAAAAGABEAAAAAAAEAAAAHABEAAAAAAAEAAAAIABEAAAAAAAEAAAAJABEAAAAAAAEAAAAKABEAAAAAAAEAAAALABEAAAAAAAEAAAAMABEAAAAAAAEAAAANABEAAAAAAAEAAAAOABEAAAAAAAEAAAAPABEAAAAAAAEAAAAQABEAAAAAAAEAAAARABEAAAAAAAEAAAASABEAAAAAAAEAAAATABEAAAAAAAEAAAATABIAAAACAAEAAAASABIAAAACAAEAAAARABIAAAACAAEAAAAQABIAAAACAAEAAAAPABIAAAACAAEAAAAOABIAAAACAAEAAAANABIAAAACAAEAAAAMABIAAAACAAEAAAALABIAAAACAAEAAAAKABIAAAACAAEAAAAJABIAAAACAAEAAAAIABIAAAACAAEAAAAHABIAAAACAAEAAAAGABIAAAACAAEAAAAFABIAAAACAAEAAAAEABIAAAACAAEAAAAUABIAAAACAAIAAAADABIAAAACAAIAAFADABEAAAACAAIAADAUABEAAAACAAIAAGAAABQAAAAAAAEAAAABABQAAAAAAAEAAAACABQAAAAAAAEAAAADABQAAAAAAAEAAAAEABQAAAAAAAEAAAAFABQAAAAAAAEAAAAGABQAAAAAAAEAAAAHABQAAAAAAAEAAAAIABQAAAAAAAEAAAAJABQAAAAAAAEAAAAKABQAAAAAAAEAAAALABQAAAAAAAEAAAAMABQAAAAAAAEAAAANABQAAAAAAAEAAAAOABQAAAAAAAEAAAAPABQAAAAAAAEAAAAQABQAAAAAAAEAAAARABQAAAAAAAEAAAASABQAAAAAAAEAAAATABQAAAAAAAEAAAAUABQAAAAAAAEAAAAVABQAAAAAAAEAAAAWABQAAAAAAAEAAAAXABQAAAAAAAEAAAAYABQAAAAAAAEAAAAZABQAAAAAAAEAAAAaABQAAAAAAAEAAAAbABQAAAAAAAEAAAAcABQAAAAAAAEAAAAdABQAAAAAAAEAAAAeABQAAAAAAAEAAAAfABQAAAAAAAEAAAAgABQAAAAAAAEAAAAhABQAAAAAAAEAAAAiABQAAAAAAAEAAAAjABQAAAAAAAEAAAAUAP7/AAACAAEAAAAVAP7/AAACAAEAAAAWAP7/AAACAAEAAAAXAP7/AAACAAEAAAAYAP7/AAACAAEAAAAZAP7/AAACAAEAAAAaAP7/AAACAAEAAAAbAP7/AAACAAEAAAAcAP7/AAACAAEAAAAdAP7/AAACAAEAAAAeAP7/AAACAAEAAAATAP7/AAACAAEAAAA=")
tile_set = ExtResource("1_uxkdi")

[node name="Player" parent="." instance=ExtResource("2_td4xg")]
use_parent_material = true
position = Vector2(192, 496)
speed = 400.0
jump_velocity = 500.0

[connection signal="switch_color" from="Player" to="." method="_on_player_switch_color"]
